--- a/airkeepalivenotification/src/main/res/layout/notification_persistent.xml
+++ b/airkeepalivenotification/src/main/res/layout/notification_persistent.xml
@@ -1,5 +1,5 @@
 <LinearLayout
-    android:background="@android:color/white"
+    android:background="#F3F3F3"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:paddingLeft="16dp"
